day1/lab4/middleware-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-ingress
  namespace: demo-app
spec:
  redirectScheme:
    scheme: https
    permanent: true
